--- a/esp32_board/nn_runner/platformio.ini
+++ b/esp32_board/nn_runner/platformio.ini
@@ -10,11 +10,11 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
-upload_port = COM4
-monitor_port = COM4
+build_flags =
+	-DARDUINO_USB_CDC_ON_BOOT=1
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	robtillaart/UUID@^0.1.5
