--- a/esp32_board/nn_runner/platformio.ini
+++ b/esp32_board/nn_runner/platformio.ini
@@ -10,11 +10,15 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = esp32-s3-devkitc-1-n8r8
 framework = arduino
 monitor_speed = 115200
 build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
+	-DBOARD_HAS_PSRAM
+	; -DCORE_DEBUG_LEVEL=5
+	; -mfix-esp32-psram-cache-issue
+; monitor_filters = default, log2file
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	robtillaart/UUID@^0.1.5
