--- a/esp32_board/nn_runner/.gitignore
+++ b/esp32_board/nn_runner/.gitignore
@@ -1,6 +1,6 @@
-
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
-./src/conf.h
+src/conf.h
+.pio/build/
