--- a/esp32_board/nn_runner/platformio.ini
+++ b/esp32_board/nn_runner/platformio.ini
@@ -23,4 +23,5 @@ lib_deps =
 	marvinroger/AsyncMqttClient@^0.9.0
 	robtillaart/UUID@^0.1.5
 	bblanchon/ArduinoJson@^7.2.1
+	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
 	esp32-camera
